# payload-car

./: .gitignore  .mcp.json  CLAUDE.md  README.md
fusion/: README.md  pyproject.toml
fusion/payload_car/: __init__.py  assemble.py  builder.py  cli.py  control_pcb.py  motion.py  payload_car.manifest  payload_car.py  wheel_mount.py
pcb/: .gitignore  index.circuit.tsx  package.json  parts.txt
